N temporal join (#65)
* IntervalMultidimQueryConfig
* git attributes
* test fixed (nio stuff) and scala code formatter
* IntervalMultidimQueryConfig: dimensionMap instead of independent sequences of fromColNames, toColNames and intervalDefs
* IntervalQueryConfig extends IntervalMultidimQueryConfig
* Intellij's test configuration template added
* IntervalQueryImpl: superfluous parameters from functions removed
* IntervalQueryImpl and TemporalQueryUtil: logging mproved
* IntervalQueryConfig removed but IntervalMultidimQueryConfig ignores higher dimensions
* BiTemporalClosedIntervalQueryConfig.withDefaultIntervalDef
* test where temporalUnifyRanges must extend dfMoment
* renaming IntervalMultidim -> MultivarRange
* multivarRangeUnifyRanges: tested with BiTemporalQueryUtilTest
* package multivarRange
* MultivarRangeQueryImpl.unifyIntervalRanges deleted, has been replaced by unifyMultivarRanges
* multivarRangeContinuous2discrete tested
* multivarRangeCleanupExtend, multivarRangeRoundDiscreteTime
* Query Utils: requiring correct number of dimensions
* BiTemporalQueryUtilTest: test cases for multivarRangeCleanupExtend
* BiTemporalQueryUtilTest: more test cases for multivarRangeCleanupExtend
* BiTemporalQueryUtilTest: more test cases for multivarRangeCleanupExtend
* SVG export of 2-dimensional data
* moving SVG export tests BiTemporalQueryUtilTest -> SVGexportTest
* multivarRangeCombine fixed: need to call it recursively to ensure everything gets combined
* renaming axes and constants and combineMultivarRanges improved
* re-organising classes and objects
* MultivariateRangeFrameExtensions: methods renamed multivarRangeXyz -> rangeXyz
* TemporalClosedIntervalQueryUtilTest: test cases renamed temporal -> rangez
* rangeExtendRange implemented for MultivarRanges
* BiTemporalClosedIntervalQueryUtilTest: first test cases for rangeInnerJoin succeed
* rangeInnerJoin successfully tested
* first biTemporal test for leftAntiJoinRanges succeeds :)
* leftAntiJoinRanges cleans and combin